--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
           go-version: '^1.13.1'
       - run: go version
       - name: Build
-        run: mvn --batch-mode --update-snapshots package deploy
+        run: make
